--- a/README.html
+++ b/README.html
@@ -357,10 +357,9 @@ display: none;
 </div>
 
 
-<pre class="r"><code>library(Deriv) # Capaz de realizar derivadas e integrais</code></pre>
-<pre><code>## Warning: package &#39;Deriv&#39; was built under R version 4.2.3</code></pre>
-<pre class="r"><code>library(ggplot2)</code></pre>
-<pre><code>## Warning: package &#39;ggplot2&#39; was built under R version 4.3.3</code></pre>
+<pre class="r"><code>library(Deriv) # Capaz de realizar derivadas e integrais
+library(ggplot2)</code></pre>
+<pre><code>## Warning: package &#39;ggplot2&#39; was built under R version 4.2.3</code></pre>
 <pre class="r"><code>############################### Define the function
 f &lt;- function(x) x**3 + 2*x**2 + x + 1
 
